--- a/portal-emendas.html
+++ b/portal-emendas.html
@@ -100,7 +100,7 @@
       <section class="w-full">
         <div class="bg-white shadow-lg p-6">
           <h2 class="text-2xl font-semibold text-gray-900 text-center">
-            Diárias
+            Emendas
           </h2>
         </div>
       </section>
@@ -120,7 +120,7 @@
             class="text-sm flex items-center !text-gray-500 hover:text-primary dark:text-primary"
           >
             <i class="ri-arrow-right-s-line mt-1 px-4"></i>
-            Diárias
+            Emendas
           </li>
         </ol>
       </section>
@@ -177,7 +177,7 @@
         <div class="bg-white rounded-lg shadow-lg p-6">
           <div class="flex justify-between items-center mb-6">
             <h2 class="text-2xl font-semibold text-gray-900/70">
-              Últimas Diárias
+              Esfera Municipal
             </h2>
             <div class="relative">
               <input
@@ -197,42 +197,52 @@
                   <th
                     class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
                   >
-                    Empenho
+                    Situação
                   </th>
                   <th
                     class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
                   >
-                    Parcela
+                    Ano
                   </th>
                   <th
                     class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
                   >
-                    Matrícula
+                    Numero
                   </th>
                   <th
                     class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
                   >
-                    Nome
+                    Objeto
                   </th>
                   <th
                     class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
                   >
-                    Tipo
+                    Descrição
                   </th>
                   <th
                     class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
                   >
-                    Ord Pgto
+                    Autoria
                   </th>
                   <th
                     class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
                   >
-                    Data Pgto
+                    Data Publicação
                   </th>
                   <th
                     class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
                   >
-                    Valor
+                    Vl. Emp
+                  </th>
+                  <th
+                    class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
+                  >
+                    Vl. Liq
+                  </th>
+                  <th
+                    class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
+                  >
+                    Vl. Pago
                   </th>
                   <th
                     class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
@@ -244,30 +254,34 @@
               <tbody class="bg-white divide-y divide-gray-200">
                 <tr>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
-                    2023NE001
+                    Em Andamento
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
-                    1
+                    2024
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
-                    12345
+                    001/2024
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
-                    João Silva
-                  </td>
-                  <td
-                    class="px-4 py-2 whitespace-nowrap text-sm inline-flex items-center rounded-full font-medium bg-blue-100 text-blue-800"
-                  >
-                    Normal
+                    Infraestrutura
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
-                    OP2023001
+                    Pavimentação de Ruas
+                  </td>
+                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
+                    Ver. João Silva
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
                     15/01/2024
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
-                    R$ 1.500,00
+                    R$ 500.000,00
+                  </td>
+                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
+                    R$ 300.000,00
+                  </td>
+                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
+                    R$ 200.000,00
                   </td>
                   <td
                     class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 flex items-center justify-center"
@@ -283,69 +297,34 @@
                 </tr>
                 <tr>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
-                    2023NE002
+                    Concluída
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
-                    1
+                    2024
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
-                    67890
+                    002/2024
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
-                    Maria Santos
-                  </td>
-                  <td
-                    class="px-4 py-2 whitespace-nowrap text-sm inline-flex items-center rounded-full font-medium bg-green-100 text-green-800"
-                  >
-                    Campo
+                    Saúde
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
-                    OP2023002
+                    Equipamentos Hospitalares
+                  </td>
+                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
+                    Ver. Maria Santos
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
                     16/01/2024
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
-                    R$ 2.000,00
-                  </td>
-                  <td
-                    class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 flex items-center justify-center"
-                  >
-                    <a
-                      href="portal-diaria-detalhe.html"
-                      class="text-primary hover:text-primary/80 transition-colors"
-                      title="Ver Detalhes"
-                    >
-                      <i class="ri-eye-line text-xl"></i>
-                    </a>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
-                    2023NE003
+                    R$ 300.000,00
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
-                    1
+                    R$ 300.000,00
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
-                    11223
-                  </td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
-                    Pedro Oliveira
-                  </td>
-                  <td
-                    class="px-4 py-2 whitespace-nowrap text-sm inline-flex items-center rounded-full font-medium bg-blue-100 text-blue-800"
-                  >
-                    Normal
-                  </td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
-                    OP2023003
-                  </td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
-                    17/01/2024
-                  </td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
-                    R$ 1.800,00
+                    R$ 300.000,00
                   </td>
                   <td
                     class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 flex items-center justify-center"
@@ -390,41 +369,6 @@
             >
               Próximo
             </button>
-          </div>
-        </div>
-      </section>
-      <section class="py-6 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="bg-white rounded-lg shadow-lg p-6">
-          <h2 class="text-2xl font-semibold text-gray-900/70 mb-6">Legenda</h2>
-          <div class="space-y-6">
-            <div class="flex flex-col md:flex-row md:items-start md:space-x-4">
-              <div class="flex-shrink-0">
-                <span
-                  class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-blue-100 text-blue-800"
-                >
-                  Normal
-                </span>
-              </div>
-              <p class="mt-2 md:mt-0 text-gray-600">
-                Diárias de pessoal civil, cobrindo alimentação, pousada e
-                locomoção urbana do servidor público ou celetista que se
-                deslocar de sua sede em objeto de serviço, em caráter eventual
-                ou transitório.
-              </p>
-            </div>
-            <div class="flex flex-col md:flex-row md:items-start md:space-x-4">
-              <div class="flex-shrink-0">
-                <span
-                  class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-green-100 text-green-800"
-                >
-                  Campo
-                </span>
-              </div>
-              <p class="mt-2 md:mt-0 text-gray-600">
-                Indenizações por execução de trabalhos de campo, também
-                conhecidas como diárias de campo.
-              </p>
-            </div>
           </div>
         </div>
       </section>
