--- a/portal.html
+++ b/portal.html
@@ -46,22 +46,21 @@
             <div class="flex items-center">
               <div class="text-2xl text-primary">Gabnet</div>
               <div class="hidden md:flex space-x-8 ml-10">
-                <a href="#" class="text-gray-600 hover:text-primary">Início</a>
-                <a href="#" class="text-gray-600 hover:text-primary"
-                  >Produtos</a
+                <a href="portal.html" class="text-gray-900 hover:text-primary"
+                  >Início</a
                 >
-                <a href="#" class="text-gray-600 hover:text-primary">Sobre</a>
-                <a href="#" class="text-gray-600 hover:text-primary">Contato</a>
+                <a href="#" class="text-gray-900 hover:text-primary">Sobre</a>
+                <a href="#" class="text-gray-900 hover:text-primary">Contato</a>
               </div>
             </div>
             <div class="flex items-center space-x-4">
               <div
-                class="w-8 h-8 flex items-center justify-center text-gray-600 hover:text-primary cursor-pointer"
+                class="w-8 h-8 flex items-center justify-center text-gray-900 hover:text-primary cursor-pointer"
               >
                 <i class="ri-moon-line text-xl"></i>
               </div>
               <div
-                class="w-8 h-8 flex items-center justify-center text-gray-600 hover:text-primary cursor-pointer"
+                class="w-8 h-8 flex items-center justify-center text-gray-900 hover:text-primary cursor-pointer"
               >
                 <i class="ri-user-line text-xl"></i>
               </div>
@@ -70,13 +69,13 @@
         </div>
       </nav>
       <div
-        class="relative bg-cover bg-center h-[400px]"
+        class="relative bg-cover bg-center h-[300px]"
         style="
           background-image: linear-gradient(
               rgba(44, 107, 243, 0.6),
               rgba(2, 119, 41, 0.3)
             ),
-            url('bgcartoon-ariquemes.png');
+            url('src/images/bgcartoon-ariquemes.png');
         "
       >
         <div class="max-w-7xl mx-auto px-4 h-full flex items-center">
@@ -84,15 +83,15 @@
             <h1 class="text-5xl md:text-6xl font-extrabold text-white mb-6">
               Portal do Cidadão Ariquemes
             </h1>
-            <p class="text-xl text-white/90 mb-8">
+            <p class="text-xl text-white/90 mb-3">
               Seu espaço para acompanhar a atuação da Câmara Municipal
             </p>
-            <a
-              href="#"
+            <!-- <a
+              href="portal-diaria.html"
               class="inline-block px-8 py-3 bg-white text-primary font-medium rounded-button hover:bg-white/90 transition-colors duration-200"
             >
               Acessar
-            </a>
+            </a> -->
           </div>
         </div>
       </div>
@@ -103,7 +102,7 @@
           <h2 class="text-3xl font-bold text-gray-900 mb-8">Acesso Rápido</h2>
           <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
             <a
-              href="#"
+              href="portal-diaria.html"
               class="block bg-white rounded-lg shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105"
             >
               <img
@@ -112,11 +111,11 @@
                 class="w-full h-48 object-cover"
               />
               <div class="p-4">
-                <h3 class="text-xl font-semibold text-gray-900">Eleições</h3>
+                <h3 class="text-xl font-semibold text-gray-900">Diárias</h3>
               </div>
             </a>
             <a
-              href="#"
+              href="portal-emendas.html"
               class="block bg-white rounded-lg shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105"
             >
               <img
@@ -125,7 +124,7 @@
                 class="w-full h-48 object-cover"
               />
               <div class="p-4">
-                <h3 class="text-xl font-semibold text-gray-900">Congresso</h3>
+                <h3 class="text-xl font-semibold text-gray-900">Emendas</h3>
               </div>
             </a>
             <a
@@ -144,7 +143,7 @@
           </div>
         </div>
       </section>
-      <section class="py-16 bg-gray-50">
+      <section class="py-16 bg-blue-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
           <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
             <div class="relative rounded-lg overflow-hidden">
@@ -466,7 +465,7 @@
         </div>
       </section>
     </main>
-    <footer class="bg-blue-50">
+    <footer class="bg-blue-100">
       <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
           <div>
