--- a/portal-diaria-detalhe.html
+++ b/portal-diaria-detalhe.html
@@ -75,7 +75,7 @@
               rgba(44, 107, 243, 0.6),
               rgba(2, 119, 41, 0.3)
             ),
-            url('src/images/bgcartoon-ariquemes.png');
+            url('src/images/bgcartoon-ariquemes.jpg');
         "
       >
         <div class="max-w-7xl mx-auto px-4 h-full flex items-center">
