--- a/portal.html
+++ b/portal.html
@@ -36,7 +36,13 @@
         },
       };
     </script>
-    <style></style>
+    <style>
+      html,
+      body {
+        padding: 0;
+        margin: 0;
+      }
+    </style>
   </head>
   <body class="bg-white">
     <header class="relative">
@@ -75,15 +81,21 @@
               rgba(44, 107, 243, 0.6),
               rgba(2, 119, 41, 0.3)
             ),
-            url('src/images/bgcartoon-ariquemes.png');
+            url('src/images/bgcartoon-ariquemes.jpg');
         "
       >
         <div class="max-w-7xl mx-auto px-4 h-full flex items-center">
           <div class="text-center mx-auto max-w-2xl">
-            <h1 class="text-5xl md:text-6xl font-extrabold text-white mb-6">
+            <h1
+              class="text-5xl md:text-6xl font-extrabold text-white mb-6"
+              style="text-shadow: 2px 2px #333"
+            >
               Portal do Cidadão Ariquemes
             </h1>
-            <p class="text-xl text-white/90 mb-3">
+            <p
+              class="text-xl text-white/90 mb-3"
+              style="text-shadow: 1px 1px #333"
+            >
               Seu espaço para acompanhar a atuação da Câmara Municipal
             </p>
             <!-- <a
@@ -197,269 +209,94 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
           <div class="flex justify-between items-center mb-8">
             <h2 class="text-3xl font-bold text-gray-900">
-              Produtos em Destaque
+              Serviços em Destaque
             </h2>
-            <!-- <div class="flex space-x-4">
-            <button class="text-gray-600 hover:text-primary">Todos</button>
-            <button class="text-gray-600 hover:text-primary">Cadeiras</button>
-            <button class="text-gray-600 hover:text-primary">Sofás</button>
-            <button class="text-gray-600 hover:text-primary">Mesas</button>
-          </div> -->
           </div>
           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+            <!-- Agricultura e pecuária -->
             <a
               href="#"
-              class="block bg-white rounded-lg shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105"
+              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
             >
-              <div class="relative">
-                <img
-                  src="https://public.readdy.ai/ai/img_res/f6498a12734befa95a42bf4964d599ea.jpg"
-                  alt="Poltrona Moderna"
-                  class="w-full h-48 object-cover"
-                />
-                <span
-                  class="absolute top-2 right-2 bg-red-500 text-white px-2 py-1 rounded-full text-sm"
-                  >-20%</span
-                >
-              </div>
-              <div class="p-4">
-                <h3 class="text-lg font-semibold text-gray-900">
-                  Poltrona Moderna
-                </h3>
-                <div class="flex items-center mt-2">
-                  <span class="text-primary font-bold">R$ 899,00</span>
-                  <span class="ml-2 text-sm text-gray-500 line-through"
-                    >R$ 1.099,00</span
-                  >
-                </div>
-                <div class="flex items-center mt-2">
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-half-fill text-yellow-400"></i>
-                  <span class="ml-2 text-sm text-gray-500">(4.5)</span>
-                </div>
-              </div>
+              <i class="ri-plant-line text-5xl text-primary mb-4"></i>
+              <h3 class="text-lg font-semibold text-gray-900">
+                Agricultura e pecuária
+              </h3>
             </a>
-            <!-- Repetir estrutura para mais 7 produtos -->
-            <!-- Produto 2 -->
+
+            <!-- Assistência Social -->
             <a
               href="#"
-              class="block bg-white rounded-lg shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105"
+              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
             >
-              <div class="relative">
-                <img
-                  src="https://public.readdy.ai/ai/img_res/b9b17772fdb36347841210134bdc5b23.jpg"
-                  alt="Cadeira de Jantar"
-                  class="w-full h-48 object-cover"
-                />
-              </div>
-              <div class="p-4">
-                <h3 class="text-lg font-semibold text-gray-900">
-                  Cadeira de Jantar
-                </h3>
-                <div class="flex items-center mt-2">
-                  <span class="text-primary font-bold">R$ 499,00</span>
-                </div>
-                <div class="flex items-center mt-2">
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-line text-yellow-400"></i>
-                  <span class="ml-2 text-sm text-gray-500">(4.0)</span>
-                </div>
-              </div>
+              <i class="ri-heart-line text-5xl text-primary mb-4"></i>
+              <h3 class="text-lg font-semibold text-gray-900">
+                Assistência Social
+              </h3>
             </a>
-            <!-- Produto 3 -->
+
+            <!-- Ciência e tecnologia -->
             <a
               href="#"
-              class="block bg-white rounded-lg shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105"
+              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
             >
-              <div class="relative">
-                <img
-                  src="https://public.readdy.ai/ai/img_res/2fe5f41ef132e48c75ac1847615050dc.jpg"
-                  alt="Mesa de Centro"
-                  class="w-full h-48 object-cover"
-                />
-                <span
-                  class="absolute top-2 right-2 bg-green-500 text-white px-2 py-1 rounded-full text-sm"
-                  >Novo</span
-                >
-              </div>
-              <div class="p-4">
-                <h3 class="text-lg font-semibold text-gray-900">
-                  Mesa de Centro
-                </h3>
-                <div class="flex items-center mt-2">
-                  <span class="text-primary font-bold">R$ 799,00</span>
-                </div>
-                <div class="flex items-center mt-2">
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <span class="ml-2 text-sm text-gray-500">(5.0)</span>
-                </div>
-              </div>
+              <i class="ri-microscope-line text-5xl text-primary mb-4"></i>
+              <h3 class="text-lg font-semibold text-gray-900">
+                Ciência e tecnologia
+              </h3>
             </a>
-            <!-- Produto 4 -->
+
+            <!-- Consultas públicas -->
             <a
               href="#"
-              class="block bg-white rounded-lg shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105"
+              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
             >
-              <div class="relative">
-                <img
-                  src="https://public.readdy.ai/ai/img_res/ea3c65c2d84e0c35e73973252ac76ace.jpg"
-                  alt="Luminária Pendente"
-                  class="w-full h-48 object-cover"
-                />
-              </div>
-              <div class="p-4">
-                <h3 class="text-lg font-semibold text-gray-900">
-                  Luminária Pendente
-                </h3>
-                <div class="flex items-center mt-2">
-                  <span class="text-primary font-bold">R$ 299,00</span>
-                </div>
-                <div class="flex items-center mt-2">
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-half-fill text-yellow-400"></i>
-                  <i class="ri-star-line text-yellow-400"></i>
-                  <span class="ml-2 text-sm text-gray-500">(3.5)</span>
-                </div>
-              </div>
+              <i class="ri-file-list-3-line text-5xl text-primary mb-4"></i>
+              <h3 class="text-lg font-semibold text-gray-900">
+                Consultas públicas
+              </h3>
             </a>
-            <!-- Produto 5 -->
             <a
               href="#"
-              class="block bg-white rounded-lg shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105"
+              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
             >
-              <div class="relative">
-                <img
-                  src="https://public.readdy.ai/ai/img_res/f337093ca2628c211c7ec25a35537306.jpg"
-                  alt="Estante Moderna"
-                  class="w-full h-48 object-cover"
-                />
-              </div>
-              <div class="p-4">
-                <h3 class="text-lg font-semibold text-gray-900">
-                  Estante Moderna
-                </h3>
-                <div class="flex items-center mt-2">
-                  <span class="text-primary font-bold">R$ 1.299,00</span>
-                </div>
-                <div class="flex items-center mt-2">
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-line text-yellow-400"></i>
-                  <span class="ml-2 text-sm text-gray-500">(4.0)</span>
-                </div>
-              </div>
+              <i class="ri-plant-line text-5xl text-primary mb-4"></i>
+              <h3 class="text-lg font-semibold text-gray-900">
+                Agricultura e pecuária
+              </h3>
             </a>
-            <!-- Produto 6 -->
+
+            <!-- Assistência Social -->
             <a
               href="#"
-              class="block bg-white rounded-lg shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105"
+              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
             >
-              <div class="relative">
-                <img
-                  src="https://public.readdy.ai/ai/img_res/7fc82e3aec4376d2f600315ed8945dd5.jpg"
-                  alt="Mesa Lateral"
-                  class="w-full h-48 object-cover"
-                />
-                <span
-                  class="absolute top-2 right-2 bg-red-500 text-white px-2 py-1 rounded-full text-sm"
-                  >-15%</span
-                >
-              </div>
-              <div class="p-4">
-                <h3 class="text-lg font-semibold text-gray-900">
-                  Mesa Lateral
-                </h3>
-                <div class="flex items-center mt-2">
-                  <span class="text-primary font-bold">R$ 399,00</span>
-                  <span class="ml-2 text-sm text-gray-500 line-through"
-                    >R$ 469,00</span
-                  >
-                </div>
-                <div class="flex items-center mt-2">
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-half-fill text-yellow-400"></i>
-                  <span class="ml-2 text-sm text-gray-500">(4.5)</span>
-                </div>
-              </div>
+              <i class="ri-heart-line text-5xl text-primary mb-4"></i>
+              <h3 class="text-lg font-semibold text-gray-900">
+                Assistência Social
+              </h3>
             </a>
-            <!-- Produto 7 -->
+
+            <!-- Ciência e tecnologia -->
             <a
               href="#"
-              class="block bg-white rounded-lg shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105"
+              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
             >
-              <div class="relative">
-                <img
-                  src="https://public.readdy.ai/ai/img_res/dfe4ed543a77aeb7ab59e9480c953867.jpg"
-                  alt="Relógio de Parede"
-                  class="w-full h-48 object-cover"
-                />
-              </div>
-              <div class="p-4">
-                <h3 class="text-lg font-semibold text-gray-900">
-                  Relógio de Parede
-                </h3>
-                <div class="flex items-center mt-2">
-                  <span class="text-primary font-bold">R$ 199,00</span>
-                </div>
-                <div class="flex items-center mt-2">
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-line text-yellow-400"></i>
-                  <span class="ml-2 text-sm text-gray-500">(4.0)</span>
-                </div>
-              </div>
+              <i class="ri-microscope-line text-5xl text-primary mb-4"></i>
+              <h3 class="text-lg font-semibold text-gray-900">
+                Ciência e tecnologia
+              </h3>
             </a>
-            <!-- Produto 8 -->
+
+            <!-- Consultas públicas -->
             <a
               href="#"
-              class="block bg-white rounded-lg shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105"
+              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
             >
-              <div class="relative">
-                <img
-                  src="https://public.readdy.ai/ai/img_res/c0bb26620c8655f8df97eaa4816f390c.jpg"
-                  alt="Luminária de Piso"
-                  class="w-full h-48 object-cover"
-                />
-                <span
-                  class="absolute top-2 right-2 bg-green-500 text-white px-2 py-1 rounded-full text-sm"
-                  >Novo</span
-                >
-              </div>
-              <div class="p-4">
-                <h3 class="text-lg font-semibold text-gray-900">
-                  Luminária de Piso
-                </h3>
-                <div class="flex items-center mt-2">
-                  <span class="text-primary font-bold">R$ 599,00</span>
-                </div>
-                <div class="flex items-center mt-2">
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <i class="ri-star-fill text-yellow-400"></i>
-                  <span class="ml-2 text-sm text-gray-500">(5.0)</span>
-                </div>
-              </div>
+              <i class="ri-file-list-3-line text-5xl text-primary mb-4"></i>
+              <h3 class="text-lg font-semibold text-gray-900">
+                Consultas públicas
+              </h3>
             </a>
           </div>
         </div>
