--- a/index.html
+++ b/index.html
@@ -111,46 +111,32 @@
     <main>
       <section class="py-16 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-          <h2 class="text-3xl font-bold text-gray-900 mb-8">Acesso Rápido</h2>
+          <h2 class="text-3xl font-bold text-gray-900 mb-8">Transparência</h2>
           <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
             <a
               href="portal-diaria.html"
-              class="block bg-white rounded-lg shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105"
+              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
             >
-              <img
-                src="https://images.pexels.com/photos/1709003/pexels-photo-1709003.jpeg"
-                alt="Eleições"
-                class="w-full h-48 object-cover"
-              />
-              <div class="p-4">
-                <h3 class="text-xl font-semibold text-gray-900">Diárias</h3>
-              </div>
+              <i
+                class="ri-money-dollar-circle-line text-5xl text-primary mb-4"
+              ></i>
+              <h3 class="text-lg font-semibold text-gray-900">Diárias</h3>
             </a>
+
             <a
               href="portal-emendas.html"
-              class="block bg-white rounded-lg shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105"
+              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
             >
-              <img
-                src="https://images.pexels.com/photos/1550342/pexels-photo-1550342.jpeg"
-                alt="Congresso"
-                class="w-full h-48 object-cover"
-              />
-              <div class="p-4">
-                <h3 class="text-xl font-semibold text-gray-900">Emendas</h3>
-              </div>
+              <i class="ri-calculator-line text-5xl text-primary mb-4"></i>
+              <h3 class="text-lg font-semibold text-gray-900">Emendas</h3>
             </a>
+
             <a
-              href="#"
-              class="block bg-white rounded-lg shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105"
+              href="portal-saude.html"
+              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
             >
-              <img
-                src="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg"
-                alt="Debate"
-                class="w-full h-48 object-cover"
-              />
-              <div class="p-4">
-                <h3 class="text-xl font-semibold text-gray-900">Debate</h3>
-              </div>
+              <i class="ri-microscope-line text-5xl text-primary mb-4"></i>
+              <h3 class="text-lg font-semibold text-gray-900">Saúde</h3>
             </a>
           </div>
         </div>
@@ -160,7 +146,7 @@
           <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
             <div class="relative rounded-lg overflow-hidden">
               <img
-                src="https://images.pexels.com/photos/6321080/pexels-photo-6321080.jpeg"
+                src="src/images/cam.jpg"
                 alt="Câmara Municipal"
                 class="w-full h-64 object-cover"
               />
@@ -183,7 +169,7 @@
             </div>
             <div class="relative rounded-lg overflow-hidden">
               <img
-                src="https://images.pexels.com/photos/8828441/pexels-photo-8828441.jpeg"
+                src="src/images/pref.jpg"
                 alt="Prefeitura"
                 class="w-full h-64 object-cover"
               />
