--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GABNET - PORTAL CIDADÃO</title>
+    <title>Conecta Ariquemes</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -50,7 +50,7 @@
         <div class="max-w-7xl mx-auto px-4">
           <div class="flex justify-between h-16">
             <div class="flex items-center">
-              <div class="text-2xl text-primary">Gabnet</div>
+              <div class="text-2xl text-primary">Conecta Ariquemes</div>
               <div class="hidden md:flex space-x-8 ml-10">
                 <a href="portal.html" class="text-primary hover:text-primary"
                   >Início</a
@@ -111,8 +111,10 @@
     <main>
       <section class="py-16 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-          <h2 class="text-3xl font-bold text-gray-900 mb-8">Transparência</h2>
-          <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+          <h2 class="text-3xl font-bold text-gray-900 mb-8">
+            Conecta Transparência
+          </h2>
+          <div class="grid grid-cols-2 md:grid-cols-3 gap-8">
             <a
               href="portal-diaria.html"
               class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
@@ -195,10 +197,10 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
           <div class="flex justify-between items-center mb-8">
             <h2 class="text-3xl font-bold text-gray-900">
-              Serviços em Destaque
+              Serviços ao Cidadão
             </h2>
           </div>
-          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+          <div class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-4 gap-8">
             <!-- Agricultura e pecuária -->
             <a
               href="#"
@@ -358,7 +360,9 @@
         <i class="ri-calendar-line text-4xl"></i>
         <span class="text-xs mt-1">Eventos</span>
       </a>
-      <button class="bg-gradient-to-r from-[#086FDE] to-[#0F57CB] text-white p-4 rounded-full -mt-14 shadow-lg">
+      <button
+        class="bg-gradient-to-r from-[#086FDE] to-[#0F57CB] text-white p-4 rounded-full -mt-14 shadow-lg"
+      >
         <i class="ri-search-line text-white text-4xl"></i>
       </button>
       <a href="#" class="text-white flex flex-col items-center">
