ajuste de menu mobile

--- a/index.html
+++ b/index.html
@@ -63,9 +63,6 @@
               <div class="w-8 h-8 flex items-center justify-center text-white cursor-pointer">
                 <i class="ri-notification-3-line text-xl"></i>
               </div>
-              <div class="w-8 h-8 flex items-center justify-center text-white cursor-pointer">
-                <i class="ri-money-dollar-circle-line text-xl"></i>
-              </div>
               <button id="mobile-menu-button" class="w-8 h-8 flex items-center justify-center text-white">
                 <i class="ri-menu-line text-2xl"></i>
               </button>
@@ -695,7 +692,7 @@
     </footer>
     <!-- Mobile Bottom Navigation -->
     <nav
-      class="fixed bottom-0 left-0 right-0 bg-gradient-to-r from-[#0286f2] to-[#1544bd] p-4 flex items-center justify-between md:hidden z-50"
+      class="fixed bottom-0 left-0 right-0 bg-gradient-to-r from-[#1544bd] to-[#0286f2] p-4 flex items-center justify-between md:hidden z-50"
     >
       <a href="#" class="text-white flex flex-col items-center">
         <i class="ri-home-line text-4xl"></i>
