--- a/index.html
+++ b/index.html
@@ -482,41 +482,41 @@
               Serviços ao Cidadão
             </h2>
           </div>
-          <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-8">
+          <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-4 md:gap-6">
             <!-- Criança -->
             <a
               href="#"
-              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
+              class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8]"
             >
-              <i class="ri-team-line text-5xl text-primary mb-4"></i>
-              <h3 class="text-lg font-semibold text-gray-900">Criança</h3>
+              <i class="ri-team-line text-3xl md:text-4xl text-primary mb-3 md:mb-4"></i>
+              <h3 class="text-sm md:text-base font-semibold text-gray-800">Criança</h3>
             </a>
 
             <!-- Jovem -->
             <a
               href="#"
-              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
+              class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8]"
             >
-              <i class="ri-group-line text-5xl text-primary mb-4"></i>
-              <h3 class="text-lg font-semibold text-gray-900">Jovem</h3>
+              <i class="ri-group-line text-3xl md:text-4xl text-primary mb-3 md:mb-4"></i>
+              <h3 class="text-sm md:text-base font-semibold text-gray-800">Jovem</h3>
             </a>
 
             <!-- Servidor(a) -->
             <a
               href="#"
-              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
+              class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8]"
             >
-              <i class="ri-user-settings-line text-5xl text-primary mb-4"></i>
-              <h3 class="text-lg font-semibold text-gray-900">Servidor(a)</h3>
+              <i class="ri-user-settings-line text-3xl md:text-4xl text-primary mb-3 md:mb-4"></i>
+              <h3 class="text-sm md:text-base font-semibold text-gray-800">Servidor(a)</h3>
             </a>
 
             <!-- Empreendedor(a) -->
             <a
               href="#"
-              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
+              class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8]"
             >
-              <i class="ri-shake-hands-line text-5xl text-primary mb-4"></i>
-              <h3 class="text-lg font-semibold text-gray-900">
+              <i class="ri-shake-hands-line text-3xl md:text-4xl text-primary mb-3 md:mb-4"></i>
+              <h3 class="text-sm md:text-base font-semibold text-gray-800">
                 Empreendedor(a)
               </h3>
             </a>
@@ -524,46 +524,46 @@
             <!-- Mulher -->
             <a
               href="#"
-              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
+              class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8]"
             >
-              <i class="ri-women-line text-5xl text-primary mb-4"></i>
-              <h3 class="text-lg font-semibold text-gray-900">Mulher</h3>
+              <i class="ri-women-line text-3xl md:text-4xl text-primary mb-3 md:mb-4"></i>
+              <h3 class="text-sm md:text-base font-semibold text-gray-800">Mulher</h3>
             </a>
 
             <!-- Turista -->
             <a
               href="#"
-              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
+              class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8]"
             >
-              <i class="ri-camera-line text-5xl text-primary mb-4"></i>
-              <h3 class="text-lg font-semibold text-gray-900">Turista</h3>
+              <i class="ri-camera-line text-3xl md:text-4xl text-primary mb-3 md:mb-4"></i>
+              <h3 class="text-sm md:text-base font-semibold text-gray-800">Turista</h3>
             </a>
 
             <!-- Idoso(a) -->
             <a
               href="#"
-              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
+              class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8]"
             >
-              <i class="ri-user-heart-line text-5xl text-primary mb-4"></i>
-              <h3 class="text-lg font-semibold text-gray-900">Idoso(a)</h3>
+              <i class="ri-user-heart-line text-3xl md:text-4xl text-primary mb-3 md:mb-4"></i>
+              <h3 class="text-sm md:text-base font-semibold text-gray-800">Idoso(a)</h3>
             </a>
 
             <!-- PCD -->
             <a
               href="#"
-              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
+              class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8]"
             >
-              <i class="ri-wheelchair-line text-5xl text-primary mb-4"></i>
-              <h3 class="text-lg font-semibold text-gray-900">PCD</h3>
+              <i class="ri-wheelchair-line text-3xl md:text-4xl text-primary mb-3 md:mb-4"></i>
+              <h3 class="text-sm md:text-base font-semibold text-gray-800">PCD</h3>
             </a>
 
             <!-- Tutor(a) de pet -->
             <a
               href="#"
-              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
+              class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8]"
             >
-              <i class="ri-service-line text-5xl text-primary mb-4"></i>
-              <h3 class="text-lg font-semibold text-gray-900">
+              <i class="ri-service-line text-3xl md:text-4xl text-primary mb-3 md:mb-4"></i>
+              <h3 class="text-sm md:text-base font-semibold text-gray-800">
                 Tutor(a) de pet
               </h3>
             </a>
@@ -571,10 +571,10 @@
             <!-- Consultas públicas -->
             <a
               href="#"
-              class="block bg-white rounded-lg shadow-md p-8 text-center transform transition-transform duration-300 hover:scale-105"
+              class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8]"
             >
-              <i class="ri-file-list-3-line text-5xl text-primary mb-4"></i>
-              <h3 class="text-lg font-semibold text-gray-900">
+              <i class="ri-file-list-3-line text-3xl md:text-4xl text-primary mb-3 md:mb-4"></i>
+              <h3 class="text-sm md:text-base font-semibold text-gray-800">
                 Consultas públicas
               </h3>
             </a>
@@ -583,7 +583,7 @@
       </section>
       <section class="py-16 bg-blue-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-          <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+          <div class="grid grid-cols-2 md:grid-cols-2 gap-8">
             <div class="relative rounded-lg overflow-hidden">
               <img
                 src="src/images/cam.jpg"
@@ -591,18 +591,18 @@
                 class="w-full h-64 object-cover"
               />
               <div
-                class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center"
+                class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center"
               >
-                <div class="text-center">
-                  <h3 class="text-2xl font-bold text-white mb-4">
+                <div class="text-center px-4">
+                  <h3 class="text-xl md:text-2xl font-bold text-white mb-2 md:mb-4">
                     Câmara Municipal
                   </h3>
                   <a
                     href="https://camaradeariquemes.ro.gov.br/"
                     target="_blank"
                     title="Câmara Municipal de Ariquemes"
-                    class="inline-flex items-center bg-primary text-white px-6 py-2 rounded-button hover:bg-primary/90"
-                    ><i class="ri-link mr-2"></i>Acessar</a
+                    class="inline-flex items-center bg-primary text-white px-4 md:px-6 py-1.5 md:py-2 rounded-button hover:bg-primary/90 text-sm md:text-base"
+                    ><i class="ri-link mr-1 md:mr-2"></i>Acessar</a
                   >
                 </div>
               </div>
@@ -614,16 +614,16 @@
                 class="w-full h-64 object-cover"
               />
               <div
-                class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center"
+                class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center"
               >
-                <div class="text-center">
-                  <h3 class="text-2xl font-bold text-white mb-4">Prefeitura</h3>
+                <div class="text-center px-4">
+                  <h3 class="text-xl md:text-2xl font-bold text-white mb-2 md:mb-4">Prefeitura</h3>
                   <a
                     href="https://ariquemes.ro.gov.br/"
                     target="_blank"
                     title="Prefeitura de Ariquemes"
-                    class="inline-flex items-center bg-primary text-white px-6 py-2 rounded-button hover:bg-primary/90"
-                    ><i class="ri-link mr-2"></i>Acessar</a
+                    class="inline-flex items-center bg-primary text-white px-4 md:px-6 py-1.5 md:py-2 rounded-button hover:bg-primary/90 text-sm md:text-base"
+                    ><i class="ri-link mr-1 md:mr-2"></i>Acessar</a
                   >
                 </div>
               </div>
