nav mobile atualizado

--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
             </div>
             <div class="flex items-center space-x-4">
               <div class="w-8 h-8 flex items-center justify-center text-white cursor-pointer">
-                <i class="ri-notification-3-line text-xl"></i>
+                <i class="ri-notification-3-line text-3xl"></i>
               </div>
               <button id="mobile-menu-button" class="w-8 h-8 flex items-center justify-center text-white">
-                <i class="ri-menu-line text-2xl"></i>
+                <i class="ri-menu-line text-3xl"></i>
               </button>
             </div>
           </div>
           <!-- Menu Mobile (escondido por padrão) -->
           <div id="mobile-menu" class="hidden mt-4 pb-2">
             <div class="flex flex-col space-y-3 items-end">
-              <a href="portal.html" class="text-white hover:text-gray-200">Início</a>
-              <a href="#" class="text-white hover:text-gray-200">Sobre</a>
-              <a href="#" class="text-white hover:text-gray-200">Contato</a>
+              <a href="portal.html" class="text-white hover:text-gray-200 text-2xl">Início</a>
+              <a href="#" class="text-white hover:text-gray-200 text-2xl">Sobre</a>
+              <a href="#" class="text-white hover:text-gray-200 text-2xl">Contato</a>
             </div>
           </div>
         </div>
