--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
         <div class="px-4 py-6">
           <div class="flex justify-between items-center">
             <div class="flex items-center">
-              <img src="src/images/logo-white.svg" alt="Conecta Ariquemes Logo" class="h-8" />
+              <img src="src/images/logo-white2.svg" alt="Conecta Ariquemes Logo" class="h-6" />
             </div>
             <div class="flex items-center space-x-4">
               <div class="w-8 h-8 flex items-center justify-center text-white cursor-pointer">
@@ -421,7 +421,7 @@
           <!-- Menu Mobile (escondido por padrão) -->
           <div id="mobile-menu" class="hidden mt-4 pb-2 transition-all duration-1000 ease-in-out">
             <div class="flex flex-col space-y-3 items-end">
-              <a href="portal.html" class="text-white hover:text-gray-200 text-2xl">Início</a>
+              <a href="/" class="text-white hover:text-gray-200 text-2xl">Início</a>
               <a href="#" class="text-white hover:text-gray-200 text-2xl">Sobre</a>
               <a href="#" class="text-white hover:text-gray-200 text-2xl">Contato</a>
             </div>
@@ -434,7 +434,7 @@
         <div class="max-w-7xl mx-auto px-4">
           <div class="flex justify-between h-16">
             <div class="flex items-center">
-              <img src="src/images/logo.svg" alt="Conecta Ariquemes Logo" class="h-12" />
+              <img src="src/images/logo2.svg" alt="Conecta Ariquemes Logo" class="h-6" />
               <div class="hidden md:flex space-x-8 ml-10">
                 <a href="portal.html" class="text-[#0061e8] hover:text-primary"
                   >Início</a
