fotos dos vereadores add

--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
           <div class="item">
             <div class="vereador-card">
               <div class="vereador-img-container">
-                <img src="https://images.pexels.com/photos/1181686/pexels-photo-1181686.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Aguida Mayara" class="vereador-img">
+                <img src="src/images/vereadores/aguida.jpg" alt="Aguida Mayara" class="vereador-img">
                 <div class="vereador-overlay">
                   <h3 class="vereador-nome">AGUIDA MAYARA</h3>
                   <p class="vereador-cargo">VEREADORA</p>
@@ -638,7 +638,7 @@
           <div class="item">
             <div class="vereador-card">
               <div class="vereador-img-container">
-                <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Eriques Santos" class="vereador-img">
+                <img src="src/images/vereadores/eriques.jpg" alt="Eriques Santos" class="vereador-img">
                 <div class="vereador-overlay">
                   <h3 class="vereador-nome">ERIQUES SANTOS</h3>
                   <p class="vereador-cargo">VEREADOR</p>
@@ -672,7 +672,7 @@
           <div class="item">
             <div class="vereador-card">
               <div class="vereador-img-container">
-                <img src="https://images.pexels.com/photos/2379005/pexels-photo-2379005.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Jefferson Cardoso" class="vereador-img">
+                <img src="src/images/vereadores/jefferson.jpg" alt="Jefferson Cardoso" class="vereador-img">
                 <div class="vereador-overlay">
                   <h3 class="vereador-nome">JEFFERSON CARDOSO</h3>
                   <p class="vereador-cargo">VEREADOR</p>
@@ -689,12 +689,12 @@
           <div class="item">
             <div class="vereador-card">
               <div class="vereador-img-container">
-                <img src="https://images.pexels.com/photos/1516680/pexels-photo-1516680.jpeg?auto=compress&cs=tinysrgb&w=300" alt="João Mendes" class="vereador-img">
+                <img src="src/images/vereadores/joaomendes.jpg" alt="João Mendes" class="vereador-img">
                 <div class="vereador-overlay">
                   <h3 class="vereador-nome">JOÃO MENDES</h3>
                   <p class="vereador-cargo">VEREADOR</p>
                   <div class="vereador-social">
-                    <a href="#" class="vereador-link"><i class="ri-links-line"></i></a>
+                    <a href="globo.com" class="vereador-link"><i class="ri-links-line"></i></a>
                     <a href="#" class="vereador-link"><i class="ri-instagram-line"></i></a>
                   </div>
                 </div>
@@ -706,7 +706,7 @@
           <div class="item">
             <div class="vereador-card">
               <div class="vereador-img-container">
-                <img src="https://images.pexels.com/photos/428364/pexels-photo-428364.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Lano Matias" class="vereador-img">
+                <img src="src/images/vereadores/lano.jpg" alt="Lano Matias" class="vereador-img">
                 <div class="vereador-overlay">
                   <h3 class="vereador-nome">LANO MATIAS</h3>
                   <p class="vereador-cargo">VEREADOR</p>
@@ -723,7 +723,7 @@
           <div class="item">
             <div class="vereador-card">
               <div class="vereador-img-container">
-                <img src="https://images.pexels.com/photos/834863/pexels-photo-834863.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Lucas Follador" class="vereador-img">
+                <img src="src/images/vereadores/lucas.jpg" alt="Lucas Follador" class="vereador-img">
                 <div class="vereador-overlay">
                   <h3 class="vereador-nome">LUCAS FOLLADOR</h3>
                   <p class="vereador-cargo">VEREADOR</p>
@@ -740,7 +740,7 @@
           <div class="item">
             <div class="vereador-card">
               <div class="vereador-img-container">
-                <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Rafaela do Batista" class="vereador-img">
+                <img src="src/images/vereadores/rafaela.jpg" alt="Rafaela do Batista" class="vereador-img">
                 <div class="vereador-overlay">
                   <h3 class="vereador-nome">RAFAELA DO BATISTA</h3>
                   <p class="vereador-cargo">VEREADORA</p>
@@ -757,7 +757,7 @@
           <div class="item">
             <div class="vereador-card">
               <div class="vereador-img-container">
-                <img src="https://images.pexels.com/photos/91227/pexels-photo-91227.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Renato Padeiro" class="vereador-img">
+                <img src="src/images/vereadores/renato.jpg" alt="Renato Padeiro" class="vereador-img">
                 <div class="vereador-overlay">
                   <h3 class="vereador-nome">RENATO PADEIRO</h3>
                   <p class="vereador-cargo">VEREADOR</p>
@@ -774,7 +774,7 @@
           <div class="item">
             <div class="vereador-card">
               <div class="vereador-img-container">
-                <img src="https://images.pexels.com/photos/1239291/pexels-photo-1239291.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Rosa da Saúde" class="vereador-img">
+                <img src="src/images/vereadores/rosa.jpg" alt="Rosa da Saúde" class="vereador-img">
                 <div class="vereador-overlay">
                   <h3 class="vereador-nome">ROSA DA SAÚDE</h3>
                   <p class="vereador-cargo">VEREADORA</p>
@@ -791,7 +791,7 @@
           <div class="item">
             <div class="vereador-card">
               <div class="vereador-img-container">
-                <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Tiago Viola" class="vereador-img">
+                <img src="src/images/vereadores/tiago.jpg" alt="Tiago Viola" class="vereador-img">
                 <div class="vereador-overlay">
                   <h3 class="vereador-nome">TIAGO VIOLA</h3>
                   <p class="vereador-cargo">VEREADOR</p>
