ajustado hover section conecta cidadao

--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
           <!-- Denúncia -->
           <a
             href="#"
-            class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8] cidadao-item"
+            class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8] cidadao-item denuncia-card hover:bg-red-100"
           >
             <i class="ri-alarm-warning-line text-3xl md:text-4xl mb-3 md:mb-4" style="color: #057ae8"></i>
             <h3 class="text-sm md:text-base font-semibold text-gray-800">
@@ -872,7 +872,7 @@
           <!-- Reclamação -->
           <a
             href="#"
-            class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8] cidadao-item"
+            class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8] cidadao-item reclamacao-card hover:bg-yellow-100"
           >
             <i
               class="ri-feedback-line text-3xl md:text-4xl mb-3 md:mb-4"
@@ -886,7 +886,7 @@
           <!-- Elogio -->
           <a
             href="#"
-            class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8] cidadao-item"
+            class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8] cidadao-item elogio-card hover:bg-blue-100"
           >
             <i class="ri-thumb-up-line text-3xl md:text-4xl mb-3 md:mb-4" style="color: #057ae8"></i>
             <h3 class="text-sm md:text-base font-semibold text-gray-800">
@@ -897,7 +897,7 @@
           <!-- Sugestão -->
           <a
             href="#"
-            class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8] cidadao-item"
+            class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8] cidadao-item sugestao-card hover:bg-green-100"
           >
             <i class="ri-lightbulb-line text-3xl md:text-4xl mb-3 md:mb-4" style="color: #057ae8"></i>
             <h3 class="text-sm md:text-base font-semibold text-gray-800">
